5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1637_1053.log
== TEST (2019-04-09 10:38:15) 
-- CODE:
nome = input("Nome do patrono: ")

if (nome == cervo):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = nome + " ""nao eh patrono do Harry Potter"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:38:39) 
-- CODE:
nome = input("Nome do patrono: ")

if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = nome + " ""nao eh patrono do Harry Potter"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:38:53) 
-- CODE:
nome = input("Nome do patrono: ")

if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = nome + " ""nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:38:59) 
-- CODE:
nome = input("Nome do patrono: ")

if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = nome + " ""nao eh patrono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.105554
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:39:05) 
-- CODE:
nome = input("Nome do patrono: ")

if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = nome + " ""nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:39:22) 
-- CODE:
nome = input("Nome do patrono: ")

if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = nome + " ""nao eh patrono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.216028
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:40:00) 
-- CODE:
nome = input("Nome do patrono: ")

if ( nome == "cervo" ):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = nome + " ""nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:40:06) 
-- CODE:
nome = input("Nome do patrono: ")

if ( nome == "cervo" ):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = nome + " ""nao eh patrono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.20904
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
